Fixed profiles look on mobile

--- a/index.css
+++ b/index.css
@@ -1,5 +1,5 @@
-@import url("https://fonts.googleapis.com/css?family=Poppins");
-@import url("https://fonts.googleapis.com/css?family=Questrial");
+@import url('https://fonts.googleapis.com/css?family=Poppins');
+@import url('https://fonts.googleapis.com/css?family=Questrial');
 
 body {
   margin: 0%;
@@ -10,7 +10,7 @@ body {
   max-width: 100vw;
   overflow-x: hidden;
   align-items: center;
-  font-family: "Poppins", sans-serif;
+  font-family: 'Poppins', sans-serif;
 }
 
 #loading {
@@ -76,7 +76,7 @@ body {
   font-size: 50px;
   color: var(--text-color);
   font-weight: bold;
-  font-family: "Questrial", sans-serif;
+  font-family: 'Questrial', sans-serif;
 }
 
 .emoji {
@@ -95,18 +95,18 @@ body {
 #username_blog {
   font-size: 18px;
   color: var(--text-color);
-  font-family: "Poppins", sans-serif;
+  font-family: 'Poppins', sans-serif;
   font-weight: bold;
 }
 
 #username_blog span {
   font-size: 24px;
-  font-family: "Questrial", sans-serif !important;
+  font-family: 'Questrial', sans-serif !important;
 }
 
 #username_blog b {
   font-size: 12px;
-  font-family: "Poppins", sans-serif;
+  font-family: 'Poppins', sans-serif;
   font-weight: bold;
 }
 
@@ -150,7 +150,7 @@ body {
   font-size: 50px;
   color: var(--text-color);
   font-weight: bold;
-  font-family: "Questrial", sans-serif;
+  font-family: 'Questrial', sans-serif;
 }
 
 #blog-display h2 {
@@ -159,7 +159,7 @@ body {
 
 #blog-display {
   padding: 1vh 0px;
-  font-family: "Questrial", sans-serif;
+  font-family: 'Questrial', sans-serif;
 }
 
 #blog p {
@@ -205,7 +205,7 @@ body {
 #footer_blog a {
   color: var(--text-color) !important;
   text-decoration: none;
-  font-family: "Questrial", sans-serif;
+  font-family: 'Questrial', sans-serif;
   font-weight: bold;
 }
 
@@ -217,13 +217,12 @@ body {
 
 #footer a {
   color: var(--text-color) !important;
-  font-family: "Questrial", sans-serif;
+  font-family: 'Questrial', sans-serif;
   border-bottom-width: thin;
   font-weight: bolder;
 }
 
-
-#footer a:hover{
+#footer a:hover {
   color: #5d93ff !important;
   transition: 0.5s;
   text-decoration: none;
@@ -246,7 +245,7 @@ body {
   margin: 1.5vh 0px;
 }
 
-#position{
+#position {
   font-size: 15px;
   font-weight: lighter;
   color: slategray;
@@ -263,13 +262,13 @@ body {
 
 #userbio {
   font-size: 15px;
-  font-family: "Questrial", sans-serif;
+  font-family: 'Questrial', sans-serif;
   width: 100%;
 }
 
 #about {
   font-size: 18px;
-  font-family: "Questrial", sans-serif;
+  font-family: 'Questrial', sans-serif;
 }
 
 #about a,
@@ -326,8 +325,7 @@ body {
   border-radius: 10px;
   color: var(--text-color);
   border: 1px solid rgb(0, 0, 0, 0.08);
-  box-shadow: 0 1px 3px rgba(0,0,0,0.12), 
-  0 1px 2px rgba(0,0,0,0.24);
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
   transition: 0.5s ease-in-out;
   transform: scale(1);
 }
@@ -335,8 +333,7 @@ body {
 .projects section:hover {
   cursor: pointer;
   border: 1px solid rgb(0, 0, 0, 0);
-  box-shadow: 0 14px 28px rgba(0,0,0,0.25), 
-  0 10px 10px rgba(0,0,0,0.22);
+  box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
   transform: scale(1.03);
 }
 
@@ -360,7 +357,7 @@ body {
 
 .about_section {
   font-size: 18px;
-  font-family: "Questrial", sans-serif;
+  font-family: 'Questrial', sans-serif;
   margin: 2vh 0px;
   font-weight: bold;
   word-wrap: break-word;
@@ -368,7 +365,7 @@ body {
 
 .about_section_OS {
   font-size: 15px;
-  font-family: "Questrial", sans-serif;
+  font-family: 'Questrial', sans-serif;
   margin: 2vh 0px;
   font-weight: lighter;
   word-wrap: break-word;
@@ -462,10 +459,10 @@ body {
 
 .sidebar__inner:after {
   background: #e6e6e6;
-  background: linear-gradient(180deg,#e6e6e6 0,#e6e6e6 48%,#fff);
+  background: linear-gradient(180deg, #e6e6e6 0, #e6e6e6 48%, #fff);
   position: absolute;
-  content: "";
-  width: .0625rem;
+  content: '';
+  width: 0.0625rem;
   height: 540px;
   top: 30px;
   right: -10px;
@@ -602,4 +599,10 @@ body {
       rgb(10, 10, 10, 0.4)
     ), */
   --background-background: #fff;
+}
+
+@media only screen and (max-width: 900px) {
+  #profile {
+    height: 100vh;
+  }
 }
